--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <hr class="tagline-divider">
                     <h2>
                         <small>By
-                            <strong>Rovinelli</strong>
+                            <strong>RJR</strong>
                         </small>
                     </h2>
                 </div>
