--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-
+    <!-- comments go here -->
     <div class="brand">Business Casual</div>
     <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
 
